--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <!-- google web font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Noto+Serif+JP&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Noto+Serif+JP:wght@400;500&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -49,7 +50,7 @@
             <p>記事タイトルが入ります。記事タイトルが入ります。記事タイトルが入ります。</p>
           </div>
         </div>
-        <button class="btn" onclick="location.href='#'">すべて見る</button>
+        <button class="btn article__btn" onclick="location.href='#'"><span>すべて見る</span></button>
       </div>
     </div>
     <!-- copy end -->
